objects/agf__QA_Test_Plan__c.object
<CustomObject>
    <description>Test Plan object which gives information about the User Story,Test Execution and Test Case which spread across different Sprints</description>
    <fields>
        <fullName>agf__BugList__c</fullName>
        <description>All features should have either a Feature Request Bug/Work record or a Bug List to track bugs.  Please enter the URL to this Record</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>All features should  have either a Feature Request Bug/Work record or a Bug List to track bugs.  Please enter the URL to this Record</inlineHelpText>
        <label>Bug List</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__Description__c</fullName>
        <description>Brief Description about Test Plan</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter the Brief Description of the Test Plan.</inlineHelpText>
        <label>Brief Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Functional_Specification__c</fullName>
        <description>Url to the functional specification, if one exists</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Url to the functional specification, if one exists</inlineHelpText>
        <label>Functional Specification</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__Scope__c</fullName>
        <description>Scope of the TestPlan</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter the Scope of the Test Plan</inlineHelpText>
        <label>Scope</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Mention the scrum team for the Test Plan</description>
        <inlineHelpText>Please mention the Scrum Team.</inlineHelpText>
        <label>Scrum Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Test Plans</relationshipLabel>
        <relationshipName>R00ND0000001rflaMAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Test_Strategy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Your test strategy should at a minimum cover what you will be testing, what you won&apos;t be testing, and what you understand the major risk areas to be.</inlineHelpText>
        <label>Test Strategy</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Test Plan</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>NAME</columns>
        <columns>agf__Description__c</columns>
        <columns>agf__Scrum_Team__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>